# Triton-XDNA

./: .gitignore  CMakeLists.txt  README.md  WINDOWS.md  pyproject.toml  setup.py
.github/workflows/: format.yml  generate-dashboard.yml
amd_triton_npu/backend/: compiler.py  driver.py
amd_triton_npu/backend/transform_library/: vectorization.mlir
examples/: generate_readme.py  matmul_transform.py  test_m8_matmul.py
examples/autotune-matmul/: transform_aie2.mlir
examples/average_pool/: average_pool.py  transform_aie2.mlir  transform_aie2p.mlir
examples/axpy/: axpy.py  transform_aie2.mlir  transform_aie2p.mlir
examples/gelu/: gelu.py  transform_aie2p.mlir
examples/leaky_relu/: leaky_relu.py  transform_aie2.mlir
examples/llm_inference/: bench_gpu_vs_npu.py  bench_llm_shapes.py  bench_npu_fast_matmul.py  bench_npu_llm_shapes.py  bench_npu_matmul.py  chat.py  debug_cpu_pipeline.py  debug_forward.py  debug_npu_quality.py  llm_npu_gptq.py  llm_npu_int8.py  llm_npu_only.py  llm_real.py  profile_decode.py  profile_int8.py  test_npu_matmul.py
examples/matmul/: transform_aie2.mlir  transform_aie2p.mlir
examples/matmul_bf16_m64_n64_k64/: matmul_bf16_m64_n64_k64.py  transform_aie2.mlir  transform_aie2p.mlir
examples/matmul_f32_m64_n32_k16_padded_atransposed/: transform_aie2p.mlir
examples/matmul_i8/: bench_i8_vs_bf16.py  matmul_i8.py  transform_aie2p.mlir  tt_i8.shared.mlir
examples/matmul_i8_m128_n64_k64/: matmul_i8_m128_n64_k64.py  transform_aie2p.mlir
examples/matmul_i8_m64_n64_k64/: matmul_i8_m64_n64_k64.py
examples/multi_drivers/: transform_aie2.mlir
examples/padded_matmul/: padded_matmul.py  transform_aie2p.mlir
examples/relu/: relu.py  transform_aie2p.mlir
examples/rms_norm/: rms_norm.py  transform_aie2.mlir  transform_aie2p.mlir
examples/sigmoid/: sigmoid.py  transform_aie2.mlir
examples/silu/: silu.py
examples/swiglu/: swiglu.py  transform_aie2.mlir  transform_aie2p.mlir
examples/test_layernorm/: transform_aie2.mlir  transform_aie2p.mlir
examples/test_softmax/: transform_aie2.mlir  transform_aie2p.mlir
examples/vec-add/: transform_aie2.mlir  transform_aie2p.mlir
utils/: build_windows.ps1  env_setup.ps1  mlir-aie-hash.txt  mlir-air-hash.txt
