[build-system]
requires = ["setuptools>=61.0", "wheel", "pip", "build", "pybind11", "cmake>=3.20", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "triton-xdna"
version = "0.1"
description = "Triton XDNA - NPU compilation stack with Triton and MLIR-AIR"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies", "optional-dependencies"]
license = {text = "MIT"}
authors = [
    {name = "AMD Inc."}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]

# Installation command:
# pip install triton-xdna \
#   --find-links https://github.com/amd/Triton-XDNA/releases/expanded_assets/latest-wheels \
#   --find-links https://github.com/Xilinx/mlir-aie/releases/expanded_assets/latest-wheels-no-rtti \
#   --find-links https://github.com/Xilinx/llvm-aie/releases/expanded_assets/nightly \
#   --find-links https://github.com/Xilinx/mlir-air/releases/expanded_assets/latest-air-wheels-no-rtti

[project.urls]
Homepage = "https://github.com/amd/Triton-XDNA"
Repository = "https://github.com/amd/Triton-XDNA.git"

[project.entry-points."triton.backends"]
amd_triton_npu = "triton.backends.amd_triton_npu"
triton_shared = "triton.backends.triton_shared"

# =============================================================================
# cibuildwheel configuration for wheel building
# =============================================================================

[tool.cibuildwheel]
build-verbosity = 3
build = "cp311-* cp312-* cp313-*"
skip = ["*-manylinux_i686", "*-musllinux*", "*-win32", "*-win_arm64"]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

[tool.cibuildwheel.linux]
environment = { PATH = "/usr/lib/ccache:/usr/lib64/ccache:/usr/lib/ccache/bin:$PATH", PIP_NO_BUILD_ISOLATION = "false" }
before-build = [
    "rm -rf {project}/third_party/triton/build",
    "yum install -y ninja-build clang lld zip unzip binutils",
    "pip install -r {project}/utils/requirements_wheel.txt",
]
environment-pass = [
    "CIBW_ARCHS",
    "CMAKE_ARGS",
    "CMAKE_GENERATOR",
    "DATETIME",
    "HOST_CCACHE_DIR",
    "TRITON_XDNA_PROJECT_COMMIT",
    "PARALLEL_LEVEL",
    "PIP_FIND_LINKS",
    "PIP_NO_BUILD_ISOLATION",
    "TRITON_BUILD_WITH_CLANG_LLD",
    "TRITON_PLUGIN_DIRS",
]
repair-wheel-command = [
    "auditwheel repair -w {dest_dir} {wheel} --exclude libmlir_async_runtime.so --exclude libmlir_c_runner_utils.so --exclude libmlir_float16_utils.so --exclude libmlir_runner_utils.so --exclude libmlir_apfloat_wrappers.so"
]

[tool.cibuildwheel.macos]
environment = { PATH = "/usr/local/opt/ccache/libexec:$PATH", PIP_NO_BUILD_ISOLATION = "false" }
before-build = [
    "pip install -r {project}/utils/requirements_wheel.txt",
]
repair-wheel-command = [
    "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
]

[tool.cibuildwheel.windows]
environment = { PIP_NO_BUILD_ISOLATION = "false" }
before-build = [
    "pip install delvewheel",
    "pip install -r {project}\\utils\\requirements_wheel.txt",
]

# =============================================================================
# setuptools configuration
# =============================================================================

[tool.setuptools]
packages = []

[tool.black]
line-length = 88
target-version = ["py310"]
extend-exclude = '''
(
  third_party/
  | build/
)
'''
